--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -22,7 +22,7 @@
             Автор: {{ post.author.get_full_name }} {{ post.author }}
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
-            Всего постов автора: <span>{{ post_count }}</span>
+            Всего постов автора: <span>{{ post.count }}</span>
           </li>
           <li class="list-group-item">
             <a href="{% url 'posts:profile' post.author %}">
